# real-time-cold-chain-lakehouse

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration.yml  unit.yml
config/: topics.json
docs/: architecture.md  aws-mapping.md  benchmark.md  demo-walkthrough.md  design-decisions.md  evolution.md  troubleshooting.md
flink-job/: pom.xml
flink-job/src/main/java/com/portfolio/coldchain/: ColdChainPipeline.java
flink-job/src/main/java/com/portfolio/coldchain/kafka/: RawKafkaRecordDeserializationSchema.java
flink-job/src/main/java/com/portfolio/coldchain/model/: BreachAlert.java  DeviceMetadata.java  EnrichedEvent.java  NormalizedEvent.java  (+3 more)
infrastructure/flink/: Dockerfile  entrypoint.sh
infrastructure/grafana/dashboards/: coldchain-overview.json
infrastructure/grafana/provisioning/dashboards/: coldchain.yml
infrastructure/minio/: Dockerfile
infrastructure/prometheus/: prometheus.yml
infrastructure/tools/: Dockerfile
infrastructure/trino/: Dockerfile  entrypoint.sh
infrastructure/trino/etc/: config.properties  jvm.config  node.properties
schemas/: detection-v1.avsc  device-metadata-v1.avsc  location-v1.avsc  telemetry-v1.avsc  telemetry-v2.avsc
scripts/: coldchain.ps1
simulator/: __init__.py  __main__.py  cli.py  config.py  generator.py  models.py  producer.py
sql/: analytics.sql  evolution-v2.sql  maintenance.sql  verification.sql
tests/python/: test_config.py  test_contracts.py  test_generator.py
tools/: __init__.py  bootstrap.py  register_v2.py  verify.py
(+12 files in other folders)
